fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -283,6 +283,7 @@
       width: 100%;
       height: 100%;
       margin-top: 80px;
+      padding-top: 30px;
       padding-bottom: 110px;
       /* background: whitesmoke; */
 
